--- a/packages/@jsii/dotnet-runtime/package.json
+++ b/packages/@jsii/dotnet-runtime/package.json
@@ -33,9 +33,7 @@
     "gen": "bash ./generate.sh",
     "build": "npm run gen && tsc --build && dotnet build --force -c Release src/Amazon.JSII.Runtime.sln",
     "dist-clean": "rm -rf dist && dotnet clean -c Release src/Amazon.JSII.Runtime.sln",
-    "test": "npm run test:analyzers && npm run test:runtime",
-    "test:analyzers": "dotnet test -c Release src/Amazon.JSII.Analyzers.UnitTests/Amazon.JSII.Analyzers.UnitTests.csproj",
-    "test:runtime": "dotnet test -c Release src/Amazon.JSII.Runtime.UnitTests/Amazon.JSII.Runtime.UnitTests.csproj",
+    "test": "dotnet test -c Release src/Amazon.JSII.Runtime.sln -nodereuse:false",
     "test:update": "UPDATE_DIFF=1 npm run test",
     "package": "package-dotnet src/Amazon.JSII.Runtime.sln && package-private"
   },
