--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -268,6 +268,10 @@ jobs:
       - name: 'Linux: Install python3-venv'
         if: runner.os == 'Linux'
         run: sudo apt install -y python3-venv
+      - name: 'Windows: Expose python3 command'
+        if: runner.os == 'Windows'
+        shell: bash
+        run: cp ${pythonLocation}/python.exe ${pythonLocation}/python3.exe
       - name: Download Artifact
         uses: actions/download-artifact@v2
         with:
