--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,7 @@ on:
 env:
   DOTNET_NOLOGO: true # Suppress logo & telemetry message from first run
   DOTNET_CLI_TELEMETRY_OPTOUT: true # Disable dotnet CLI telemetry
+  YARN_GPG: 'no' # Make sure yarn does not try to use gpg (could prevent windows steps from finishing)
 
 # This workflows currently has the following jobs:
 # - build                   : Builds the source tree as-is
