--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,6 @@ on:
 env:
   DOTNET_NOLOGO: true # Suppress logo & telemetry message from first run
   DOTNET_CLI_TELEMETRY_OPTOUT: true # Disable dotnet CLI telemetry
-  YARN_GPG: 'no' # Make sure yarn does not try to use gpg (could prevent windows steps from finishing)
 
 # This workflows currently has the following jobs:
 # - build                   : Builds the source tree as-is
@@ -322,7 +321,7 @@ jobs:
           yarn install --frozen-lockfile
       - name: Test
         run: |-
-          yarn test --loglevel silly
+          yarn test
       # Ensure working directory is clean (tests should not change checked in source code)
       - name: 'Assert clean working directory'
         if: runner.os != 'Windows' # Windows will see artificial permission changes, so we ignore it
