--- a/packages/@jsii/dotnet-runtime/package.json
+++ b/packages/@jsii/dotnet-runtime/package.json
@@ -33,7 +33,7 @@
     "gen": "bash ./generate.sh",
     "build": "npm run gen && tsc --build && dotnet build --force -c Release src/Amazon.JSII.Runtime.sln",
     "dist-clean": "rm -rf dist && dotnet clean -c Release src/Amazon.JSII.Runtime.sln",
-    "test": "bash -c 'set -x; dotnet test --no-restore -c Release src/Amazon.JSII.Runtime.sln' && echo $?",
+    "test": "node ./run-tests.js",
     "test:update": "UPDATE_DIFF=1 npm run test",
     "package": "package-dotnet src/Amazon.JSII.Runtime.sln && package-private"
   },
