--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,7 +77,7 @@ jobs:
           yarn build
       - name: Prepare Artifact
         run: |-
-          tar Jcvf ${{ runner.temp }}/built-tree.tar.xz                         \
+          tar zcvf ${{ runner.temp }}/built-tree.tgz                            \
             --exclude='**/.env'                                                 \
             --exclude='**/.nuget'                                               \
             --exclude='**/node_modules'                                         \
@@ -90,7 +90,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: built-tree
-          path: ${{ runner.temp }}/built-tree.tar.xz
+          path: ${{ runner.temp }}/built-tree.tgz
       # Ensure working directory is clean (build should not change checked in source code)
       - name: 'Assert clean working directory'
         if: runner.os != 'Windows' # Windows will see artificial permission changes, so we ignore it
@@ -276,19 +276,13 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: built-tree
-      # Put GitBash ahead of $PATH, so we avoid surprises due to bad tar, etc...
-      # (technically a hack around https://github.com/actions/virtual-environments/issues/282)
-      - name: 'Windows: Put GitBash ahead of $PATH'
-        if: runner.os == 'Windows'
-        run: |-
-          echo "C:\Program Files\Git\usr\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
       - name: Extract Artifact
         run: |-
           echo "::group::Untar Archive"
-          tar Jxvf built-tree.tar.xz
+          tar zxvf built-tree.tgz
           echo "::endgroup"
 
-          rm built-tree.tar.xz
+          rm built-tree.tgz
       - name: Locate Caches
         id: cache-locations
         run: |-
