feat(jsii): experimental --strip-deprecated feature
This feature will cause `jsii` to erase all declarations marked with
`@deprecated` from the `.jsii` assembly and `.d.ts` files.

When a `@deprecated` type is extended (or implemented) by a type that
is not `@deprecated`, the inheritance chain will be corrected, erasing
the `@deprecated` type and replacing it with it's non `@deprecated`
parents, if any.

Remaining uses of `@deprecated` members will be reported through
diagnostic messages (with the `ERROR` severity).

---

A new module `bindings` was implemented to allow relating TypeScript AST
nodes to "arbitrary" points in the jsii assembly, allowing to recover
that information once the tree was fully processed. This makes
multi-pass transformations not need to re-inspect the whole AST again.

--- a/packages/jsii/tsconfig.json
+++ b/packages/jsii/tsconfig.json
@@ -1,13 +1,6 @@
 {
   "extends": "../../tsconfig-base",
-  "include": [
-    "**/*.ts"
-  ],
-  "exclude": [
-    "test/negatives/*",
-    "jest.config.ts",
-  ],
-  "references": [
-    { "path": "../@jsii/spec" },
-  ],
+  "include": ["**/*.ts"],
+  "exclude": ["test/negatives/*", "jest.config.ts"],
+  "references": [{ "path": "../@jsii/spec" }]
 }
