--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,6 @@ updates:
     directory: '/'
     schedule:
       interval: daily
-    open-pull-requests-limit: 10
     labels:
       - dependencies
     versioning-strategy: increase
@@ -21,7 +20,6 @@ updates:
     directory: '/packages/@jsii/dotnet-runtime/src'
     schedule:
       interval: daily
-    open-pull-requests-limit: 10
     labels:
       - dependencies
       - language/dotnet
@@ -30,7 +28,6 @@ updates:
     directory: '/packages/@jsii/dotnet-runtime-test/test'
     schedule:
       interval: daily
-    open-pull-requests-limit: 10
     labels:
       - dependencies
       - language/dotnet
@@ -39,7 +36,6 @@ updates:
     directory: '/packages/@jsii/python-runtime'
     schedule:
       interval: daily
-    open-pull-requests-limit: 10
     labels:
       - dependencies
       - language/python
@@ -48,7 +44,22 @@ updates:
     directory: '/gh-pages'
     schedule:
       interval: daily
-    open-pull-requests-limit: 10
+    labels:
+      - dependencies
+      - language/python
+
+  - package-ecosystem: pip
+    directory: '/packages/jsii-pacmak/test/generated-code'
+    schedule:
+      interval: daily
+    labels:
+      - dependencies
+      - language/python
+
+  - package-ecosystem: pip
+    directory: '/packages/jsii-pacmak/lib/targets/python'
+    schedule:
+      interval: daily
     labels:
       - dependencies
       - language/python
