--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1069,7 +1069,7 @@
     },
     {
       "login": "benfarr",
-      "name": "Benjamin E. Farr",
+      "name": "Ben Farr",
       "avatar_url": "https://avatars0.githubusercontent.com/u/10361379?v=4",
       "profile": "https://github.com/benfarr",
       "contributions": [
