feat(go): run `go fmt` and `go build` after code generation
To ensure the generated go code is formatted and compiles by executing `go fmt`
and `go build` on the output directory.

In order to be able to do that within mono-repos (and in the jsii repo itself), we need to be able to resolve local dependencies (same as all other languages).

Resolves #2463

--- a/packages/jsii-pacmak/package.json
+++ b/packages/jsii-pacmak/package.json
@@ -53,6 +53,7 @@
   "devDependencies": {
     "@jsii/dotnet-runtime": "^0.0.0",
     "@jsii/java-runtime": "^0.0.0",
+    "@jsii/go-runtime": "^0.0.0",
     "@scope/jsii-calc-lib": "^0.0.0",
     "@types/clone": "^2.1.0",
     "@types/commonmark": "^0.27.4",
