--- a/packages/@jsii/go-runtime/package.json
+++ b/packages/@jsii/go-runtime/package.json
@@ -5,14 +5,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npm run gen:rt && (cd ./jsii-experimental && go build)",
-    "fmt": "go fmt ./jsii-experimental ./jsii-calc-test",
+    "build": "npm run gen:rt && (cd ./jsii-runtime-go && go build)",
+    "fmt": "go fmt ./jsii-runtime-go ./jsii-calc-test",
     "gen:calc": "ts-node build-tools/gen-calc.ts",
     "gen:rt": "ts-node build-tools/gen.ts",
     "generate": "npm run gen:rt && npm run gen:calc",
     "lint": "eslint . --ext .ts --ignore-path=.gitignore",
     "lint:fix": "yarn lint --fix",
-    "test": "(cd ./jsii-experimental && go test) && npm run test:calc",
+    "test": "(cd ./jsii-runtime-go && go test) && npm run test:calc",
     "test:calc": "npm run gen:calc && go test ./jsii-calc-test"
   },
   "keywords": [],
