--- a/packages/@jsii/go-runtime/package.json
+++ b/packages/@jsii/go-runtime/package.json
@@ -6,11 +6,11 @@
   "main": "index.js",
   "scripts": {
     "build": "npm run gen:rt && (cd ./jsii-runtime-go && go build)",
-    "fmt": "go fmt ./jsii-runtime-go ./jsii-calc-test",
+    "fmt": "go fmt ./... && (cd ./jsii-runtime-go && go fmt)",
     "gen:calc": "ts-node build-tools/gen-calc.ts",
     "gen:rt": "ts-node build-tools/gen.ts",
     "generate": "npm run gen:rt && npm run gen:calc",
-    "lint": "eslint . --ext .ts --ignore-path=.gitignore",
+    "lint": "go vet ./... && (cd ./jsii-runtime-go && go vet)",
     "lint:fix": "yarn lint --fix",
     "test": "(cd ./jsii-runtime-go && go test) && npm run test:calc",
     "test:calc": "npm run gen:calc && go test ./jsii-calc-test"
