--- a/packages/jsii-calc/package.json
+++ b/packages/jsii-calc/package.json
@@ -37,7 +37,7 @@
     "watch": "jsii --project-references -w",
     "lint": "eslint . --ext .js,.ts --ignore-path=.gitignore",
     "lint:fix": "yarn lint --fix",
-    "test": "node test/test.calc.js && diff-test test/assembly.jsii .jsii",
+    "test": "(ls test/test.*.js | xargs -n1 node) && diff-test test/assembly.jsii .jsii",
     "test:update": "npm run build && UPDATE_DIFF=1 npm run test"
   },
   "dependencies": {
