Do not depend on @jsii/go-runtime internal module structure

--- a/packages/@jsii/go-runtime/package.json
+++ b/packages/@jsii/go-runtime/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "build": "npm run gen:rt && (cd ./jsii-runtime-go && go build)",
+    "build": "tsc --build && npm run gen:rt && (cd ./jsii-runtime-go && go build)",
     "fmt": "go fmt ./... && (cd ./jsii-runtime-go && go fmt)",
-    "gen:calc": "ts-node build-tools/gen-calc.ts",
-    "gen:rt": "ts-node build-tools/gen.ts",
+    "gen:calc": "node build-tools/gen-calc.js",
+    "gen:rt": "node build-tools/gen.js",
     "generate": "npm run gen:rt && npm run gen:calc",
     "lint": "go vet ./... && (cd ./jsii-runtime-go && go vet)",
     "lint:fix": "yarn lint --fix",
