--- a/packages/@jsii/go-runtime/.eslintrc.yaml
+++ b/packages/@jsii/go-runtime/.eslintrc.yaml
@@ -1,5 +1,5 @@
 ---
-extends: ../../../../eslint-config.yaml
+extends: ../../../eslint-config.yaml
 rules:
   'import/no-extraneous-dependencies':
     - error
