fix(rosetta,pacmak): TypeError in node 10 with --experimental-worker
isaacs/node-graceful-fs#204 prevents `graceful-fs` (a dependency of
`fs-extra`) from loading in a worker thread when using node < 12. The
issue affects only version `4.2.5`, so pinning both `jsii-rosetta` and
`jsii-pacmak` (both of which may use worker threads when available) to
the last known good version: `4.2.4`, until a fixed release of
`graceful-fs` is released.

--- a/packages/jsii-pacmak/package.json
+++ b/packages/jsii-pacmak/package.json
@@ -43,6 +43,7 @@
     "commonmark": "^0.29.3",
     "escape-string-regexp": "^4.0.0",
     "fs-extra": "^9.1.0",
+    "graceful-fs": "4.2.4",
     "jsii-reflect": "^0.0.0",
     "jsii-rosetta": "^0.0.0",
     "semver": "^7.3.4",
