--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -477,7 +477,7 @@ jobs:
           tar zxvf built-tree.tgz
           rm built-tree.tgz
       - name: Release
-        if: github.ref == 'refs/head/release'
+        # if: github.ref == 'refs/head/release'
         run: |-
           ls -la
           exit 1
