--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -477,10 +477,11 @@ jobs:
           tar zxvf built-tree.tgz
           rm built-tree.tgz
       - name: Release
-        working-directory: ${{ github.workspace }}/jsii-built-tree/packages/@jsii/go-runtime/jsii-runtime-go
+        working-directory: ${{ github.workspace }}/jsii-built-tree
         # if: github.ref == 'refs/head/release'
         run: |-
           VERSION=$(node -p 'require("./lerna.json").version')
+          cd ./packages/@jsii/go-runtime/jsii-runtime-go
           echo ${VERSION} > version
           DRYRUN=true npx -p jsii-release@latest jsii-release-golang .
         env:
