--- a/packages/@scope/jsii-calc-base-of-base/package.json
+++ b/packages/@scope/jsii-calc-base-of-base/package.json
@@ -21,8 +21,8 @@
   "engines": {
     "node": ">= 10.3.0"
   },
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "build/lib/index.js",
+  "types": "build/lib/index.d.ts",
   "scripts": {
     "build": "jsii --project-references && jsii-rosetta",
     "pacmak": "jsii-pacmak",
@@ -57,6 +57,10 @@
         "distName": "scope.jsii-calc-base-of-base",
         "module": "scope.jsii_calc_base_of_base"
       }
+    },
+    "tsc": {
+      "outDir": "./build",
+      "rootDir": "."
     },
     "versionFormat": "short",
     "metadata": {
