chore: remove npm deps from dependabot + auto-approve (#2578)
We have a custom workflow which updates deps.

Additionally, add a GitHub workflow to auto-approve PRs with the `pr/auto-approve` label.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,25 +1,10 @@
 version: 2
 
 updates:
-  - package-ecosystem: npm
-    directory: '/'
-    schedule:
-      interval: daily
-    labels:
-      - dependencies
-    versioning-strategy: increase
-    ignore:
-      - dependency-name: typescript
-        versions:
-          - '>= 3.10.a'
-      - dependency-name: '@types/node'
-        versions:
-          - '>= 11.a'
-
   - package-ecosystem: nuget
     directory: '/packages/@jsii/dotnet-runtime/src'
     schedule:
-      interval: daily
+      interval: weekly
     labels:
       - dependencies
       - language/dotnet
@@ -27,7 +12,7 @@ updates:
   - package-ecosystem: nuget
     directory: '/packages/@jsii/dotnet-runtime-test/test'
     schedule:
-      interval: daily
+      interval: weekly
     labels:
       - dependencies
       - language/dotnet
@@ -35,7 +20,7 @@ updates:
   - package-ecosystem: pip
     directory: '/packages/@jsii/python-runtime'
     schedule:
-      interval: daily
+      interval: weekly
     labels:
       - dependencies
       - language/python
@@ -43,7 +28,7 @@ updates:
   - package-ecosystem: pip
     directory: '/gh-pages'
     schedule:
-      interval: daily
+      interval: weekly
     labels:
       - dependencies
       - language/python
@@ -68,3 +53,5 @@ updates:
     directory: '/'
     schedule:
       interval: daily
+    labels:
+      - dependencies
