--- a/packages/@jsii/go-runtime/package.json
+++ b/packages/@jsii/go-runtime/package.json
@@ -5,15 +5,13 @@
   "description": "",
   "main": "lib/index.js",
   "scripts": {
-    "build": "tsc --build && npm run gen:rt && (cd ./jsii-runtime-go && go build)",
-    "fmt": "go fmt ./... && (cd ./jsii-runtime-go && go fmt)",
+    "build": "tsc --build && npm run gen:rt",
+    "fmt": "node build-tools/all-go.js fmt ./...",
     "gen:calc": "node build-tools/gen-calc.js",
     "gen:rt": "node build-tools/gen.js",
     "generate": "npm run gen:rt && npm run gen:calc",
-    "lint": "go vet ./... && (cd ./jsii-runtime-go && go vet)",
-    "lint:fix": "yarn lint --fix",
-    "test": "(cd ./jsii-runtime-go && go test) && npm run test:calc",
-    "test:calc": "npm run gen:calc && go test ./jsii-calc-test"
+    "lint": "node build-tools/all-go.js vet ./...",
+    "test": "npm run gen:calc && node build-tools/all-go.js test ./..."
   },
   "keywords": [],
   "author": "",
