chore: copy golang runtime to dist for publishing
The publisher expects golang code to reside under the `go` directory in the build artifact. To that end, add a "package" script to the `@jsii/go-runtime` module which copies the go runtime code to `dist/go`. This is then collected during mono-repo packaging.

Remove the go publishing step from the github workflow as it is now handled by the delivlib pipeline.

Fixes #2579

--- a/packages/@jsii/go-runtime/package.json
+++ b/packages/@jsii/go-runtime/package.json
@@ -10,6 +10,7 @@
     "gen:calc": "node build-tools/gen-calc.js",
     "gen:rt": "node build-tools/gen.js",
     "generate": "npm run gen:rt && npm run gen:calc",
+    "package": "build-tools/package.sh",
     "lint": "node build-tools/all-go.js vet ./...",
     "test": "npm run gen:calc && node build-tools/all-go.js test ./..."
   },
