--- a/.github/workflows/auto-approve.yml
+++ b/.github/workflows/auto-approve.yml
@@ -5,9 +5,13 @@ on: pull_request
 
 jobs:
   auto-approve:
-    if: contains(github.event.pull_request.labels.*.name, 'pr/auto-approve')
+    if: >
+       contains(github.event.pull_request.labels.*.name, 'pr/auto-approve') && 
+       (github.event.pull_request.user.login == 'aws-cdk-automation' 
+        || github.event.pull_request.user.login == 'dependabot[bot]' 
+        || github.event.pull_request.user.login == 'dependabot-preview[bot]')
     runs-on: ubuntu-latest
     steps:
     - uses: hmarr/auto-approve-action@v2.0.0
       with:
-        github-token: "${{ secrets.AUTO_APPROVE_GITHUB_TOKEN }}"
+        github-token: "${{ secrets.GITHUB_TOKEN }}"
