--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,10 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '5.0.x'
+      - name: Set up Go 1.16
+        uses: actions/setup-go@v2
+        with:
+          go-version: '1.16'
       - name: Set up Java 8
         uses: actions/setup-java@v1
         with:
@@ -113,6 +117,10 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '5.0.x'
+      - name: Set up Go 1.16
+        uses: actions/setup-go@v2
+        with:
+          go-version: '1.16'
       - name: Set up Java 8
         uses: actions/setup-java@v1
         with:
@@ -197,6 +205,7 @@ jobs:
       matrix:
         # All currently supported node versions (Maintenance LTS, Active LTS, Current)
         dotnet: ['3.1.x']
+        go: ['1.16']
         java: ['8']
         node: ['10', '12', '14']
         os: [ubuntu-latest]
@@ -206,40 +215,47 @@ jobs:
           # Test using Windows
           - os: windows-latest
             dotnet: '3.1.x'
+            go: '1.16'
             java: '8'
             node: '10'
             python: '3.6'
           # Test using macOS
           - os: macos-latest
             dotnet: '3.1.x'
+            go: '1.16'
             java: '8'
             node: '10'
             python: '3.6'
           # Test alternate .NETs
           - java: '8'
             dotnet: '5.0.x'
+            go: '1.16'
             node: '10'
             os: ubuntu-latest
             python: '3.6'
           # Test alternate Javas
           - java: '11'
             dotnet: '3.1.x'
+            go: '1.16'
             node: '10'
             os: ubuntu-latest
             python: '3.6'
           # Test alternate Pythons
           - python: '3.7'
             dotnet: '3.1.x'
+            go: '1.16'
             java: '8'
             node: '10'
             os: ubuntu-latest
           - python: '3.8'
             dotnet: '3.1.x'
+            go: '1.16'
             java: '8'
             node: '10'
             os: ubuntu-latest
           - python: '3.9'
             dotnet: '3.1.x'
+            go: '1.16'
             java: '8'
             node: '10'
             os: ubuntu-latest
@@ -252,6 +268,10 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: ${{ matrix.dotnet }}
+      - name: Set up Go ${{ matrix.go }}
+        uses: actions/setup-go@v2
+        with:
+          go-version: ${{ matrix.go }}
       - name: Set up Java ${{ matrix.java }}
         uses: actions/setup-java@v1
         with:
@@ -336,6 +356,10 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '5.0.x'
+      - name: Set up Go 1.16
+        uses: actions/setup-go@v2
+        with:
+          go-version: '1.16'
       - name: Set up Java 8
         uses: actions/setup-java@v1
         with:
