--- a/gh-pages/content/specification/.pages.yml
+++ b/gh-pages/content/specification/.pages.yml
@@ -6,3 +6,4 @@ nav:
   - The jsii kernel API: 3-kernel-api.md
   - 4-standard-compliance-suite.md
   - 5-new-language-intake.md
+  - 6-compliance-report.md
