refactor(go): move child process handling to dedicated package
Isolate the subprocess handling to a dedicated sub-package, to ensure it
has a better defined API. Also implemented the version check part of the
handshake logic.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -49,6 +49,22 @@ updates:
       - dependencies
       - language/python
 
+  - package-ecosystem: gomod
+    directory: '/packages/@jsii/go-runtime'
+    schedule:
+      interfval: daily
+    labels:
+      - dependencies
+      - language/go
+
+  - package-ecosystem: gomod
+    directory: '/packages/@jsii/go-runtime/jsii-runtime-go'
+    schedule:
+      interfval: daily
+    labels:
+      - dependencies
+      - language/go
+
   - package-ecosystem: github-actions
     directory: '/'
     schedule:
